# ERC_HD

./: .gitignore  .gitmodules  README.md  astra.urdf  chat-gpt-4-docker  kerby_arm.slx  kerby_arm_pid_control.m  set.sh  test.sh
2022/src/control/motor_control/: CMakeLists.txt  package.xml
2022/src/control/motor_control/include/ethercatcpp/: beckhoff_EL1018.h  beckhoff_EL3104.h  core.h  ethercat_device.h  ethercat_unit_device.h
2022/src/control/motor_control/include/pid/: signal_manager.h
2022/src/control/motor_control/include/xcontrol_v2/: epos4_extended.h
2022/src/control/motor_control/lib/xcontrol_v2/: epos4_extended.cpp
2022/src/control/motor_control/src/: motor_main0.cpp  test.cpp  test2.cpp
2023/: .gitignore  ar_tag.py  main.py  test_to_add.txt  (+1 more)
catkin_ws/src/control/motor_control/: CMakeLists.txt
catkin_ws/src/control/motor_control/include/ethercatcpp/: beckhoff_EK1100.h  beckhoff_EK1110.h  beckhoff_EL2008.h  beckhoff_EL5101.h  epos3.h  epos4.h  ethercat_agregate_device.h  ethercat_bus.h  fake_device.h  master.h  slave.h  soem_master_pimpl.h
catkin_ws/src/control/motor_control/include/motor_control/: controller.h
catkin_ws/src/control/motor_control/include/soem/: ethercattype.h
catkin_ws/src/control/motor_control/include/xcontrol_v2/: network_master.h  one_axis_slot.h  three_axis_slot.h
catkin_ws/src/control/motor_control/lib/xcontrol_v2/: network_master.cpp  one_axis_slot.cpp  three_axis_slot.cpp
catkin_ws/src/control/motor_control/msg/: simJointState.msg
catkin_ws/src/control/motor_control/src/: controller.cpp  motor_main0.cpp  test.cpp
hd_ws/src/control/astra_hw_interface/: CMakeLists.txt  astra_hw_interface.xml
hd_ws/src/control/astra_hw_interface/include/astra_hw_interface/: astra_arm_interface.hpp  visibility_control.h
hd_ws/src/control/astra_hw_interface/src/: astra_arm_interface.cpp
hd_ws/src/control/astra_moveit_config_new/: CMakeLists.txt  package.xml
hd_ws/src/control/astra_moveit_config_new/config/: astra.ros2_control.xacro  kinematics.yaml
hd_ws/src/control/astra_moveit_config_new/launch/: setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
hd_ws/src/control/fake_components/: CMakeLists.txt  package.xml
hd_ws/src/control/fake_components/scripts/: fake_cs_gamepad.py  fake_cs_keyboard.py  fake_cs_task.py  fake_motor_control.py  fake_rover_control.py  fake_vision.py  test_gamepad.py  vision_test.py
hd_ws/src/control/kerby_moveit_config/: CMakeLists.txt  package.xml
hd_ws/src/control/kerby_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kerby.ros2_control.xacro  kerby.srdf  kerby.urdf.xacro  kerby_arm.rviz  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
hd_ws/src/control/kerby_moveit_config/launch/: aaa.launch.py  aaa2.launch.py  aaa3.launch.py  aaa5.launch.py  demo.launch.py  jetson.launch.py  kerby.launch.py  move_group.launch.py  move_group2.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hd_ws/src/control/moveit_api_test/: CMakeLists.txt  package.xml
hd_ws/src/control/moveit_api_test/launch/: move_group_interface.launch.py  test2.launch.py
hd_ws/src/control/moveit_api_test/src/: motion_planning.cpp  move_group_interface_test.cpp  test.cpp  test2.cpp  test3.cpp
hd_ws/src/control/trajectory_planner/: CMakeLists.txt  package.xml
hd_ws/src/control/trajectory_planner/include/trajectory_planner/: planner.h
hd_ws/src/control/trajectory_planner/kinematics_utils/: pose_corrector.py  pose_tracker.py  quaternion_arithmetic.py
hd_ws/src/control/trajectory_planner/launch/: planner.launch.py  planner_nice.launch.py  task_execution.launch.py  test_demo.launch.py
hd_ws/src/control/trajectory_planner/scripts/: fake_cs_task.py  fake_vision.py  task_executor.py  vision_test.py
hd_ws/src/control/trajectory_planner/src/: planner.cpp  planner_main.cpp  planner_supervisor.cpp  test.cpp  test_demo.cpp
hd_ws/src/control/trajectory_planner/task_execution/: all_tasks.py
hd_ws/src/control/trajectory_planner/task_execution/command/: __init__.py  add_object_command.py  all_commands.py  command.py  gripper_command.py  gripper_commands.py  joint_space_command.py  manual_inverse_command.py  named_joint_target_command.py  pose_command.py  rassor_command.py  request_detection_command.py  straight_move_command.py  voltmeter_command.py
hd_ws/src/control/trajectory_planner/trajectory_planner/: eef_pose_corrector.py  pose_tracker.py  quaternion_arithmetic.py  task_classes.py
hd_ws/src/kinematics/fake_components/: CMakeLists.txt
hd_ws/src/kinematics/fake_components/launch/: fake_cs_keyboard.launch.py  servoing_test.launch.py
hd_ws/src/kinematics/fake_components/scripts/: fake_cs_gamepad.py  fake_cs_task.py  fake_rover_control.py
hd_ws/src/kinematics/fake_components/src/: servoing_test.cpp
hd_ws/src/kinematics/kerby_moveit_config/: CMakeLists.txt
hd_ws/src/kinematics/kerby_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  servo_config.yaml
hd_ws/src/kinematics/kerby_moveit_config/launch/: no_rviz.launch.py
hd_ws/src/old_vision/: package.xml  setup.cfg  setup.py
hd_ws/src/old_vision/old_vision/: ar_tag.py  main.py  stereo_camera.py  vision_node.py
hd_ws/src/old_vision/old_vision/controlpanel/: button.py  cpo.py
hd_ws/src/old_vision/old_vision/publishers/: fake_cs_task_selector.py  image_publisher.py  target_pose_publisher.py  target_publisher.py
hd_ws/src/old_vision/old_vision/subscribers/: image_subscriber.py
kinematics/onyx_description/: CMakeLists.txt  package.xml
kinematics/onyx_description/description/: URDF3.trans  URDF3.urdf.xacro  hd.urdf.xacro  kerby.gazebo  kerby.trans  onyx.urdf.xacro
kinematics/onyx_description/meshes/: steering_1.stl  steering_3.stl
kinematics/onyx_description/meshes/new_hd/: Gripper_Arcs_v1_1.stl  Gripper_Arcs_v1__2__1.stl  Gripper_Finger_v1_1.stl  Gripper_Finger_v1__1__1.stl  base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_5_1.stl  link_6_1.stl
(+1805 files in other folders)
